# gxb-core

./: .autotools  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  a  compile.sh  genesis.json  交易所接入文档en.md
contracts/: CMakeLists.txt
contracts/examples/: contract_storage_demo.cpp  linear_release_asset.cpp
contracts/examples/bank/: README.md  bank.abi  bank.cpp  bank.wasm  bank.wast
contracts/examples/bank2/: bank.abi  bank.cpp  bank.wasm  bank.wast
contracts/examples/contract_call_contract/: README
contracts/examples/contract_call_contract/contracta/: contracta.cpp
contracts/examples/contract_call_contract/contractb/: contractb.cpp
contracts/examples/contract_storage_demo/: contract_storage_demo.abi  contract_storage_demo.cpp  contract_storage_demo.wasm  contract_storage_demo.wast
contracts/examples/dice/: README.md  dice.cpp
contracts/examples/gxc-nft/: README.md  nft.cpp
contracts/examples/gxc-swap/: README.md  log.cpp  message.hpp  swap.cpp
contracts/examples/gxcswap/: README.md  swap.cpp
contracts/examples/hello/: hello.abi  hello.cpp  hello.wasm  hello.wast
contracts/examples/helloworld/: README.md  helloworld.abi  helloworld.cpp  helloworld.wasm  helloworld.wast
contracts/examples/linear_release_asset/: README  linear_release_asset.abi  linear_release_asset.cpp  linear_release_asset.wasm  linear_release_asset.wast
contracts/examples/linear_vesting_asset/: README  README.md  linear_vesting_asset.cpp
contracts/examples/multindex/: multindex.cpp
contracts/examples/redpacket/: README  README.md  redpacket.cpp
contracts/examples/redpacket1/: README  redpacket.cpp  redpacket1.cpp
contracts/examples/relay/: Cross_chain.cpp  README.md  relay.cpp
contracts/examples/riddle/: README.md  riddle.cpp
contracts/examples/stackpool/: README.md
contracts/examples/stakepool/: README.md  message.hpp  stakepool.cpp
contracts/examples/swap/: README.md
contracts/examples/test/: test.abi  test.cpp  test.hpp  test.wasm  test.wast
contracts/examples/test/apiexample/: example.cpp
contracts/examples/test/bancor/: README.md  bancor.cpp
contracts/examples/test/betdice/: README.md  betdice.cpp
contracts/examples/test/callself/: README.md  callself.cpp
contracts/examples/test/ccctransfer/: README.md
contracts/examples/transfer/: transfer.abi  transfer.cpp  transfer.wasm  transfer.wast
contracts/examples/transfer1/: transfer1.abi  transfer1.cpp  transfer1.wasm  transfer1.wast
contracts/examples/verify_sign/: verify_sign.abi  verify_sign.cpp  verify_sign.wasm  verify_sign.wast
contracts/examples/voting_test/: README.md  voting_test.cpp
contracts/graphenelib/: action.hpp  asset.h  contract.hpp  contract_asset.hpp  crypto.h  datastream.hpp  dispatcher.hpp  fixed_key.hpp  global.h  multi_index.hpp  print.hpp  serialize.hpp  symbol.hpp  types.h
contracts/gxblib/: CMakeLists.txt  action.h  action.hpp  asset.h  asset.hpp  asset_object.hpp  contract.hpp  contract_asset.hpp  contract_old.hpp  crypto.h  datastream.hpp  db.h  dispatcher.hpp  fixed_key.hpp  global.h  gxb.hpp  gxblib.cpp  memory.h  memory.hpp  multi_index.hpp  object.hpp  object_id.hpp  print.h  print.hpp  serialize.hpp  symbol.hpp  system.h  types.h  types.hpp  vector.hpp
contracts/musl/: CMakeLists.txt
contracts/skeleton/: contract_storage_demo.cpp  skeleton.cpp  skeleton.hpp
libraries/: CMakeLists.txt
libraries/abi_generator/: CMakeLists.txt  abi_generator.cpp
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  database_api_impl.cpp  impacted.cpp  network_broadcast_api.cpp
libraries/chain/: .contract_evaluator.cpp.swp  CMakeLists.txt  abi_serializer.cpp  account_evaluator.cpp  account_object.cpp  apply_context.cpp  apply_js_context.cpp  assert_evaluator.cpp  asset_evaluator.cpp  balance_evaluator.cpp  block_database.cpp  committee_member_evaluator.cpp  confidential_evaluator.cpp  contract_evaluator.cpp  contract_js_evaluator.cpp  data_market_evaluator.cpp  data_storage_evaluator.cpp  data_transaction_evaluator.cpp  database.cpp  datasource_copyright_evaluator.cpp  db_balance.cpp  db_block.cpp  db_debug.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_notify.cpp  db_update.cpp  evaluator.cpp  fork_database.cpp  free_data_product_evaluator.cpp  get_config.cpp  league_data_product_evaluator.cpp  league_evaluator.cpp  loyalty_evaluator.cpp  market_evaluator.cpp  name.cpp  pay_data_transaction_evaluator.cpp  proposal_evaluator.cpp  (+18 more)
libraries/chain/hardfork.d/: 1001.hf  1002.hf  1003.hf  1004.hf  1005.hf  1006.hf
libraries/chain/protocol/: account.cpp  asset.cpp  asset_ops.cpp  fee_schedule.cpp  market.cpp  transaction.cpp  transfer.cpp  types.cpp  witness.cpp  worker.cpp
libraries/chain/webassembly/: binaryen.cpp  wabt.cpp  wavm.cpp
libraries/db/: object_database.cpp  undo_database.cpp
libraries/egenesis/: CMakeLists.txt  embed_genesis.cpp
libraries/net/: node.cpp
libraries/plugins/: CMakeLists.txt  README.md
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/account_history_leveldb/: CMakeLists.txt  account_history_leveldb_plugin.cpp
libraries/plugins/data_transaction/: CMakeLists.txt  data_transaction_plugin.cpp
libraries/plugins/debug_witness/: CMakeLists.txt
libraries/plugins/elasticsearch/: CMakeLists.txt  elasticsearch.cpp  elasticsearch_plugin.cpp
libraries/plugins/market_history/: CMakeLists.txt  market_history_plugin.cpp
libraries/plugins/mongo_db/: CMakeLists.txt  mongo_db_plugin.cpp
libraries/plugins/query_op/: CMakeLists.txt  query_op_plugin.cpp
libraries/plugins/query_txid/: CMakeLists.txt  query_txid_plugin.cpp
libraries/plugins/snapshot/: snapshot.cpp
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/utilities/: CMakeLists.txt  elasticsearch.cpp
libraries/wallet/: wallet.cpp
programs/genesis_util/: CMakeLists.txt  genesis_update.cpp
programs/gxc_abigen/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt
tools/: CMakeLists.txt  gxbcpp.in  gxx.in
(+230 files in other folders)
