add_subdirectory( fc )
add_subdirectory( builtins )
add_subdirectory( db )
add_subdirectory( wasm-jit )
add_subdirectory( softfloat )
add_subdirectory( deterministic_openssl_rand )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( abi_generator )
