file(GLOB HEADERS "include/graphene/chain/*.hpp")
file(GLOB PROTOCOL_HEADERS "include/graphene/chain/protocol/*.hpp")

if(APPLE)
    MESSAGE (STATUS "------ OS X --------")
    file(GLOB GRAPHENE_CHAIN_LIB "lib/osx/libgraphene_chain.a")
    FILE (COPY ${GRAPHENE_CHAIN_LIB} DESTINATION ${CMAKE_BINARY_DIR}/libraries/chain)
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE (STATUS "------ linux --------")
    file(GLOB GRAPHENE_CHAIN_LIB "lib/ubuntu/libgraphene_chain.a")
    FILE (COPY ${GRAPHENE_CHAIN_LIB} DESTINATION ${CMAKE_BINARY_DIR}/libraries/chain)
endif()

INSTALL(FILES ${HEADERS} DESTINATION "include/graphene/chain")
INSTALL(FILES ${PROTOCOL_HEADERS} DESTINATION "include/graphene/chain/protocol")
