add_subdirectory( witness )
add_subdirectory( account_history )
add_subdirectory( delayed_node )
add_subdirectory( debug_witness )
add_subdirectory( data_transaction )
add_subdirectory( snapshot )
if(LOAD_TXID_PLUGIN)
	add_subdirectory( query_txid )
endif()
if(LOAD_OP_PLUGIN)
	add_subdirectory( query_op )
endif()
if(LOAD_ELASTICSEARCH_PLUGIN)
	add_subdirectory( elasticsearch )
endif()
