add_subdirectory( witness )
add_subdirectory( account_history )
add_subdirectory( delayed_node )
add_subdirectory( debug_witness )
add_subdirectory( data_transaction )
add_subdirectory( snapshot )
if(LOAD_TXID_PLUGIN)
	add_subdirectory( query_txid )
endif()
if(LOAD_ACCOUNT_HISTORY_LEVELDB_PLUGIN)
	add_subdirectory( account_history_leveldb )
endif()
if(LOAD_ELASTICSEARCH_PLUGIN)
	add_subdirectory( elasticsearch )
endif()
